# pca533-octrees

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  alloc_example.sh  dist_helpers.py  dist_test.py  dists.py  install_deps_cloudlab.sh  main.py  pyproject.toml  random.ipynb  run_batches.py
include/: random.hpp
outputs_031126/: analyzed_n100k.csv  analyzed_n100m.csv  analyzed_n10k.csv  analyzed_n10m.csv  analyzed_n1m.csv
outputs_031126/filament_xyz/s0p001/n100k/: filament_xyz_s0p001_n100k.nsys-rep
outputs_031126/filament_xyz/s0p001/n10k/: filament_xyz_s0p001_n10k.nsys-rep
outputs_031126/filament_xyz/s0p001/n10m/: filament_xyz_s0p001_n10m.nsys-rep
outputs_031126/filament_xyz/s0p001/n1m/: filament_xyz_s0p001_n1m.nsys-rep
outputs_031126/filament_xyz/s0p01/n100k/: filament_xyz_s0p01_n100k.nsys-rep
outputs_031126/filament_xyz/s0p01/n10k/: filament_xyz_s0p01_n10k.nsys-rep
outputs_031126/filament_xyz/s0p01/n10m/: filament_xyz_s0p01_n10m.nsys-rep
outputs_031126/filament_xyz/s0p01/n1m/: filament_xyz_s0p01_n1m.nsys-rep
outputs_031126/filament_xyz/s0p1/n100k/: filament_xyz_s0p1_n100k.nsys-rep
outputs_031126/filament_xyz/s0p1/n10k/: filament_xyz_s0p1_n10k.nsys-rep
outputs_031126/filament_xyz/s0p1/n10m/: filament_xyz_s0p1_n10m.nsys-rep
outputs_031126/filament_xyz/s0p1/n1m/: filament_xyz_s0p1_n1m.nsys-rep
outputs_031126/filament_xyz/s0p5/n100k/: filament_xyz_s0p5_n100k.nsys-rep
outputs_031126/filament_xyz/s0p5/n10k/: filament_xyz_s0p5_n10k.nsys-rep
outputs_031126/filament_xyz/s0p5/n10m/: filament_xyz_s0p5_n10m.nsys-rep
outputs_031126/filament_xyz/s0p5/n1m/: filament_xyz_s0p5_n1m.nsys-rep
outputs_031126/filament_yz/s0p001/n100k/: filament_yz_s0p001_n100k.nsys-rep
scripts/: analyze_sqlite_files.py  nys-rep_to_sqlite.py  plot_domain_octree.py
src/: CMakeLists.txt  main.cpp  main.cu  pcah5.hpp  runner.cpp  runner.cu  runner.hpp  runner_cpu.cpp  save_octree.cuh  save_octree.hpp  utils.hpp
test/: CMakeLists.txt  main.cpp  rand.hpp
(+79 files in other folders)
