[project]
name = "pca533-octrees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
